axum-debug/tests/fail/attrs.stderr
error: unexpected token
 --> tests/fail/attrs.rs:3:17
  |
3 | #[debug_handler(foo)]
  |                 ^^^
